objects/IntegrationContact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IntegrationAccount</label>
        <referenceTo>IntegrationAccount__c</referenceTo>
        <relationshipLabel>IntegrationContacts</relationshipLabel>
        <relationshipName>IntegrationContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountant_Role__c</fullName>
        <label>Accountant Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_ID__c</fullName>
        <label>Auth ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona_Id__c</fullName>
        <label>Persona Id</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>